TaskManagementSystem/client/src/assets/styles/TimelineView.css
.divWrapper{
    display: flex;
    justify-content: space-between;
    align-Items: 'flex-end';

  }
  .linkButton {
    border-radius: 8px;
    border: 1px solid transparent;
    padding: 0.6em 1.2em;
    margin-right: 10px;
    font-size: 1em;
    font-weight: 500;
    font-family: inherit;
    background-color: #DEB992;
    cursor: pointer;
    transition: border-color 0.25s;
    display: flex;

  }
  .heading{
    font-family: Helvetica;
    font: Helvetica;
    padding-top: 10px;
    text-align: left;
    display: flex;
  }
  .ganttWrapper{
    position: relative;
    width: 95vw;
    height: 70vh;
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;;
  }
  

